--- a/Source/Android/app/src/main/res/layout/activity_add_directory.xml
+++ b/Source/Android/app/src/main/res/layout/activity_add_directory.xml
@@ -5,7 +5,7 @@
               android:layout_height="match_parent"
               android:orientation="vertical">
 
-    <Toolbar
+    <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar_folder_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
